5/10/2024 - Añadido CHANGELOG y descripcion en la carpeta recien creada company_hierarchy
          - Editado el comando clean en Makefile para que funcione en Windows y Linux
          - Cambiada la extension de los archivos main.c y empresa.c a .cpp. En Windows, los archivos .c no pueden compilarse a C++.
            Tambien se cambiaron las extensiones en Makefile a .cpp
          - Se tradujo todo a español
            Agregado empleados.h y empleados.cpp con las funciones que manipulan personas
            De empresa.cpp y empresa.h se eliminaron esas mismas funciones
            Se definieron tres estructuras sencillas: Empresa, Cargo, Persona